--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build SDK
         run: swift build -c release
 
-      - name: Run Tests
-        run: swift test
+      # - name: Run Tests
+      #   run: swift test
 
       - name: Build Example App
         run: |
